# homewardbound

./: .dockerignore  .gitignore  Dockerfile  README.md  TODO.TXT  cats.service  datadump.json  dbuild.sh  drun.sh  export_cats.sh  gcbuild.sh  gcdeploy.sh  gcschedule.sh  gcserviceupdate.sh  get_twcss.sh  grun.sh  gunicorn.conf.py.bak  main.py  olive.html  olive.py  package-lock.json  pyproject.toml  setup.psql  show_logs.sh  start.sh  tailwind.config.js  tw.sh  update_cats.sh  updatecss.sh  verify_storage.py
cloud_run/: add_secrets.sh  gcupdatesecrets.sh
docker/: Dockerfile  compose.yml  prometheus.yml  run_grafana.sh  run_prometheus.sh
example/: olive.json  olive.py
hbcats/: db.sqlite3  manage.py
hbcats/cats/: admin.py  apps.py  middleware.py  models.py  updatecats.py  urls.py  views.py
hbcats/cats/management/commands/: download_images.py  update.py
hbcats/cats/migrations/: 0001_initial.py  0002_alter_cat_last_seen.py  0003_updatelog.py  0004_cat_adopted_updatelog_adopted_cats_and_more.py  0005_cat_status.py  0006_remove_cat_adopted.py  0007_cat_birthday_cat_breed_cat_intake_date_cat_location_and_more.py  0008_cat_image.py
hbcats/cats/templates/cats/: base.html  cat_table.html  dashboard.html  report.html  stats_bar.html  update_log_dashboard.html  update_log_table.html
hbcats/cats/templates/lockdown/: base.html  form.html
hbcats/hbcats/: asgi.py  context_processors.py  settings.py  urls.py  wsgi.py
services/: README.md  cats.service  cats.service.gcp  cats.service.pi5
services/etc/logrotate.d/: django_app
services/pi5/: cats.service  cats.timer
(+6 files in other folders)
