[project]
name = "homewardbound"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bs4>=0.0.2",
    "django>=5.2.8",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "selenium>=4.38.0",
    "uvicorn>=0.40.0",
    "whitenoise>=6.11.0",
]
